# unity-test-runner

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
config/: default.toml
docs/: getting-started-linux.md  getting-started-macos.md  getting-started-windows.md
src/: classify.rs  cli.rs  config.rs  error.rs  lib.rs  log_parse.rs  main.rs  mcp.rs  nunit.rs  output.rs  path_util.rs  progress.rs  run.rs  unity.rs
tests/: fixtures.rs  mcp_protocol.rs  real_unity.rs
tests/fixtures/: nunit-failed.xml  nunit-passed.xml  nunit-self-closing.xml
